<resources>
    <string name="app_name">Perfect Outfit</string>
    <string name="rating_too_cold">Too cold</string>
    <string name="rating_perfect">Perfect</string>
    <string name="rating_too_hot">Too hot</string>
    <string name="rating_emoji_too_cold">🥶</string>
    <string name="rating_emoji_perfect">😃</string>
    <string name="rating_emoji_too_hot">🥵</string>
    <string name="temperature_real">Real temperature</string>
    <string name="temperature_apparent">Apparent temperature</string>
    <string name="settings_use_apparent_temperature">Use %1$s</string>
    <string name="rating_saved_toast">Rated: %1$s</string>
    <string name="backup_failed_title">Backup failed</string>
    <string name="backup_failed_text">Your Google Drive backup could not be completed. Tap to check Settings.</string>
</resources>